--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Ebler</a>
+      <a class="navbar-brand" href="#">Home</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">TEST <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Projekte</a></li>
        
       </ul>
       <form class="navbar-form navbar-left">
@@ -47,7 +47,7 @@
        
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Login</a></li>
         
       </ul>
     </div><!-- /.navbar-collapse -->
