--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,15 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">TEST <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Projekte</a></li>
+	<div class="dropdown">
+   	 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+   	 <span class="caret"></span></button>
+   	 <ul class="dropdown-menu">
+    	  <li><a href="#">HTML</a></li>
+    	  <li><a href="#">CSS</a></li>
+     	 <li><a href="#">JavaScript</a></li>
+   	 </ul>
+ 	 </div>
        
       </ul>
       <form class="navbar-form navbar-left">
