--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,23 +38,20 @@
         <li><a href="#">Projekte</a></li>
 	
        
-      </ul>
-	<div class="dropdown">
-   	 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-   	 <span class="caret"></span></button>
-   	 <ul class="dropdown-menu">
-    	  <li><a href="#">HTML</a></li>
-    	  <li><a href="#">CSS</a></li>
-     	 <li><a href="#">JavaScript</a></li>
-   	 </ul>
- 	 </div>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-         
-         
-        </div>
-       
-       
+      
+	<li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+       </ul>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Login</a></li>
