--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,35 +34,27 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">TEST <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Projekte</a></li>
+        <li class="active"><a href="#">Über mich<span class="sr-only">(current)</span></a></li>
+        
 	
        
       
 	<li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projekte<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">xxx</a></li>
+            <li><a href="#">Brausteuerung</a></li>
+            <li><a href="#">Polar M400 to CSV</a></li>
+	    <li><a href="#">Feuertonne</a></li>
+            
           </ul>
         </li>
        </ul>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login</a></li>
-        
-      </ul>
+      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-
-
 
 
     </header>
